force-app/main/default/objects/PBS_gBUILD_PBuildingInnovation__c/PBS_gBUILD_PBuildingInnovation__c.object-meta.xml
<CustomObject>
    <description>gBUILD PBuilding Innovation:  Innovations that were produced during this building modification.</description>
    <label>gBUILD Innovation</label>
    <nameField>
        <displayFormat>gbI_{00000}</displayFormat>
        <label>gBUILDI</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>gBUILD Innovations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>