force-app/main/default/objects/PBS_gBUILD_PBuildingInnovation__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>GPG category</description>
    <inlineHelpText>Please select the green proving ground (GPG) category for this building.</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AdvancedMetering</fullName>
            </value>
            <value>
                <fullName>BuildingEnvelopeInterior</fullName>
            </value>
            <value>
                <fullName>CoGenerationSystems</fullName>
            </value>
            <value>
                <fullName>DemandRespond,LoadManagement</fullName>
            </value>
            <value>
                <fullName>Heating</fullName>
            </value>
            <value>
                <fullName>HVAC_Controls_Diagnostics</fullName>
            </value>
            <value>
                <fullName>HVAC_Equipment_SystemDesign</fullName>
            </value>
            <value>
                <fullName>Lighting(Controls)</fullName>
            </value>
            <value>
                <fullName>Lighting(Luminaries,Design)</fullName>
            </value>
            <value>
                <fullName>OperationsAndMaintenance</fullName>
            </value>
            <value>
                <fullName>RenewableEnergySystems</fullName>
            </value>
            <value>
                <fullName>SanitationWaterConservationChemReduction</fullName>
            </value>
            <value>
                <fullName>WorkplaceAndInterior</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Other(PleaseEnterBelow)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>