force-app/main/default/objects/PBS_gBUILD_PBuildingInnovation__c/fields/CategoryOther__c.field-meta.xml
<CustomField>
    <fullName>CategoryOther__c</fullName>
    <description>GPG Other category decription</description>
    <inlineHelpText>If GPG category was not included in the above list, please specify here.</inlineHelpText>
    <label>Category Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>