force-app/main/default/objects/PBS_gBUILD_PBuildingInnovation__c/fields/FundingStatus__c.field-meta.xml
<CustomField>
    <fullName>FundingStatus__c</fullName>
    <description>Funding Status</description>
    <inlineHelpText>Please select the funding status of this building.</inlineHelpText>
    <label>Funding Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FundedByArra</fullName>
            </value>
            <value>
                <fullName>FundedByNonArra</fullName>
            </value>
            <value>
                <fullName>NeedsFunding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>