force-app/main/default/objects/PBS_gBUILD_PBuildingInnovation__c/fields/IsBaselineDataAvailable__c.field-meta.xml
<CustomField>
    <fullName>IsBaselineDataAvailable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Baseline Data Available</description>
    <inlineHelpText>Please indicate if there is baseline data available to measure and verify the anticipated savings or impact of this technology (organized either by system or building affected).</inlineHelpText>
    <label>Baseline Data Available</label>
    <type>Checkbox</type>
</CustomField>