force-app/main/default/objects/PBS_gBUILD_PBuildingInnovation__c/fields/PotentialImpact__c.field-meta.xml
<CustomField>
    <fullName>PotentialImpact__c</fullName>
    <description>Potential impact of use of GPG technology</description>
    <inlineHelpText>Potential Impact - Please explain the potential or anticipated impact of your innovative technology and how it will mitigate or solve the stated problem.</inlineHelpText>
    <label>Potential Impact</label>
    <length>32767</length>
    <type>LongTextArea</type>
</CustomField>