force-app/main/default/objects/PBS_gBUILD_PBuildingInnovation__c/fields/ProblemStatement__c.field-meta.xml
<CustomField>
    <fullName>ProblemStatement__c</fullName>
    <description>Statement of the problem</description>
    <inlineHelpText>Problem Statement for Innovative Green Technology - Please explain the problem to be addressed with the proposed innovative technology or approach.</inlineHelpText>
    <label>Problem Statement</label>
    <length>32767</length>
    <type>LongTextArea</type>
</CustomField>