force-app/main/default/objects/PBS_gBUILD_PBuildingInnovation__c/fields/TechDescription__c.field-meta.xml
<CustomField>
    <fullName>TechDescription__c</fullName>
    <description>Description of GPG technology</description>
    <inlineHelpText>Please describe the technology being proposed and explain why the technology is considered innovative compared to similar technologies/solutions.</inlineHelpText>
    <label>Innovative Technology Description</label>
    <length>32767</length>
    <type>LongTextArea</type>
</CustomField>