force-app/main/default/objects/PBS_gBUILD_PBuildingInnovation__c/fields/WasMeasurementVerificationIncluded__c.field-meta.xml
<CustomField>
    <fullName>WasMeasurementVerificationIncluded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Was Measurement And Verification Included</description>
    <inlineHelpText>Was Measurement and Verification work included in your budget?  If so, please check the box.</inlineHelpText>
    <label>Was Measurement &amp; Verification Included</label>
    <type>Checkbox</type>
</CustomField>