force-app/main/default/objects/PBS_gBUILD_PBuildingInnovation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>Category__c</columns>
    <columns>FundingStatus__c</columns>
    <columns>ProblemStatement__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>